Add get-all-lists route, improved param parsing, docs
